--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
 		    <artifactId>spring-data-jpa</artifactId>
 		    <version>2.5.4</version>
 		</dependency>
+		
+		 <dependency>
+	        <groupId>org.apache.tomcat.embed</groupId>
+	        <artifactId>tomcat-embed-jasper</artifactId>
+	        <scope>provided</scope>
+    	</dependency>
 	</dependencies>
 
 	<build>
